# cosai-discovery

./: .env.example  .gitignore  CHAT.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  VECTOR_SEARCH_ARCHITECTURE.md  VECTOR_SEARCH_GUIDE.md  cdx-config.yaml  cosai-discovery.code-workspace  pyproject.toml
_docs/: candidate-changes.md  evaluation-prompts.md  index-file-format-0.1.0.md  indexer-build-plan.md  indexer-notes.md  mcp-tool-surface-0.0.1.md  mcp-tool-surface-0.0.2.md  process.md  project-walkthrough-log.md  to-do.md
_docs/archive/: index-file-format-0.0.1.md  index-file-format-0.0.2.md  index-file-format-0.0.3.md  index-file-format-0.0.4.md  project-walkthrough-log-v0.0.2.md
_expected/: README.md  codeguard-cli.md  cosai-tsc.md  cosai-whitepaper-converter.md  oasis-open-project.md  project-codeguard.md  secure-ai-tooling.md  ws1-supply-chain.md  ws2-defenders.md  ws3-ai-risk-governance.md  ws4-secure-design-agentic-systems.md
_scripts/: README.md  clear-checkpoints.sh  clear-indexes.sh  start-chat  test-build.sh  test-chat.sh  test-embed.sh
src/cdx_indexer/: README.md  __init__.py  chat.py  cli.py  config.py  embed.py  manifest.py  packages.py  planner.py  references.py  scan.py  snippets.py  types.py  vectorstore.py  writer.py
src/cdx_indexer/prompts/: __init__.py  stage1_system.md  stage1_user.md.tmpl  stage2a_system.md  stage2a_user.md.tmpl  stage2b_system.md  stage2b_user.md.tmpl  stage2c_system.md  stage2c_user.md.tmpl
tests/: README.md
